--- a/package.json
+++ b/package.json
@@ -19,8 +19,20 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "angular-bootstrap-md": "^8.5.0",
+    "angular-confirmation-popover": "^4.2.1",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "mdbootstrap": "^4.8.11",
+    "ngx-order-pipe": "^2.0.4",
+    "ngx-pagination": "^4.1.0",
+    "ngx-toastr": "^11.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "view-component": "^2.1.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
